tests/variables/valid/no_initialize.amu
main :: () -> s32 {
    a:s32;
    return 0;
}