tests/variables/invalid/undeclared_var.amu
main :: () -> s32 {
    return a;
}